--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "typescript-react-set",
   "version": "0.1.0",
-  "homepage": "https://steve-messing.github.io/react-set",
+  "homepage": "https://steve-messing.github.io/typescript-react-set",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
